plugins {
    id 'java'
    id 'application'
}

group = 'edu.upc.prop.clusterxx'
version = '1.0-SNAPSHOT'

ext {
    javaMainClass = 'edu.upc.prop.clusterxx.Main'
}

application {
    mainClassName = javaMainClass
}

jar {
    manifest {
        attributes 'Main-Class': javaMainClass
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // this is just an example of importing an external library, you do not need to use it in your project
    implementation 'com.google.code.gson:gson:2.8.9'
    testImplementation('junit:junit:4.13.1')

    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
}
